made iframe link go to correct target

--- a/app/views/digests/show.iframe.haml
+++ b/app/views/digests/show.iframe.haml
@@ -7,4 +7,4 @@
     %span#digest=@stamp.digest
     %span#timestamp=@stamp.utc
     %br
-    %a{:href=>"/#{@stamp.digest}",:rel=>"_top"} Certified by TimeCert.org
+    %a{:href=>"/#{@stamp.digest}",:target=>"_top"} Certified by TimeCert.org
