--- a/app/views/layout/application.html.haml
+++ b/app/views/layout/application.html.haml
@@ -18,4 +18,4 @@
           = catch_content :for_layout
         .footer
           %a{:href=>"http://stakeventures.com/pages/whoami"}
-            (c) 2006 Pelle Braendgaard
+            (c) 2006-2008 Pelle Braendgaard
