--- a/app/views/layout/application.html.haml
+++ b/app/views/layout/application.html.haml
@@ -1,8 +1,7 @@
 %html
   %head
     %title TimeCert
-    %link{ :href=>"/stylesheets/boilerplate.css", :media=>"screen",:rel=>"Stylesheet",:type=>"text/css"}
-    %link{ :href=>"/stylesheets/plugins.css", :media=>"screen",:rel=>"Stylesheet",:type=>"text/css"}
+    %link{ :href=>"/stylesheets/styles.css", :media=>"screen",:rel=>"Stylesheet",:type=>"text/css"}
   %body
     #page
       #header
