--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -21,7 +21,7 @@ a { outline: none; }
 .wrapper { display: block; }
 
 #page {
-	margin-left:150px;
+  margin: 0 auto;
 	padding: 1em;
 	width:600px;
 	background: white;
@@ -39,7 +39,7 @@ body { font-size: 85%; }
 
 
 /* Default fonts and colors. */
-body,h1,h2,h3,h4,h5,h6,p,ul,ol,dl,input,textarea { font-family: Helvetica, Arial, sans-serif; }
+body,h1,h2,h3,h4,h5,h6,p,ul,ol,dl,input,textarea { font-family: Helvetica Neue, Helvetica, Arial, sans-serif; }
 
 
 /* Headings
@@ -164,6 +164,46 @@ ul.tabs:after { content: "."; display: block; height: 0; clear: both; visibility
 * html ul.tabs { height: 1%; }
 ul.tabs { display: block; }
 
-
+/* TimeCert */
 pre,code,tt {font-family: Monaco,Consolas,Liberation Mono,Bitstream Vera Mono,monospace;}
 code { background: #006; color: yellow;}
+
+.stamp {
+  background-color:#A00;
+  color: #FFF;
+  -moz-border-radius: 1em;
+	-webkit-border-radius: 1em;	
+	padding:1em;
+	font-size:150%;
+	margin:1em 0;
+	text-align:center;
+}
+.stamp .digest {
+  color: yellow;
+  background-color:#600;
+  font-family: Monaco,Consolas,Liberation Mono,Bitstream Vera Mono,monospace;
+  -moz-border-radius: 1em;
+	-webkit-border-radius: 1em;	
+	padding:1em;
+}
+.stamp .timestamp {
+  font-size: 150%;
+}
+.stamp p {
+  margin: 0.2em 0;
+  font-size:80%;
+  color: #CCC;
+}
+.footer {
+  margin: 2em 0 0 0;
+  background:#FAA;
+  color:#600;
+  padding:1em 1em 2em 1em;
+}
+.footer .stuff {
+  width:600px;
+  margin:0 auto;
+}
+.footer a {
+  color: #00A;
+}
