Updated site with info about GitHub project

--- a/app/views/layout/application.html.haml
+++ b/app/views/layout/application.html.haml
@@ -20,4 +20,7 @@
     .footer
       .stuff
         %a{:href=>"http://stakeventures.com/pages/whoami"}
-          (c) 2006-2008 Pelle Braendgaard
+          (c) 2006-2008 Pelle Braendgaard and Stake Ventures Inc.
+        Source code available on
+        %a{:href=>"http://github.com/pelle/timecert/tree/master"}
+          GitHub
