--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -41,6 +41,17 @@
 
 %p
   %a{:href=>"http://neubia.com/archives/000483.html"} Read the TimeCert launch post for more...
+%h3 TimeCert is OpenSource
+%p
+  To encourage the trust in TimeCert we have Open Sourced it. The source is available on 
+  %a{:href=>"http://github.com/pelle/timecert/tree/master"}
+    GitHub.
+  TimeCert was written in
+  %a{:href=>"http://ruby-lang.org"} Ruby
+  using the
+  %a{:href=>"http://merbivore.com"} Merb Framework
+  and
+  %a{:href=>"http://datamapper.org"} Datamapper ORM layer.
 .links
   %h3 Links to my other Projects
   %ul 
