Updated index to reflect launch post

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -37,10 +37,10 @@
 %p Embedded in your own web page or blog
 %iframe{:src=>"/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.iframe",:width=>"450px",:height=>"30px"}
 %br
-=source_code_select "<iframe src=\"http://timecert.org/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.iframe\" width=\"450px\" height=\"30px\"/>"
-
+=source_code_select "<iframe src=\"http://timecert.org/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.iframe\" width=\"450px\" height=\"30px\"></frame>"
+%br
 %p
-  %a{:href=>"http://neubia.com/archives/000483.html"} Read the TimeCert launch post for more...
+  %a{:href=>"http://stakeventures.com/articles/2008/07/17/relaunching-timecert-a-trusted-third-party-time-stamping-service"} Read the TimeCert launch post for more...
 %h3 TimeCert is OpenSource
 %p
   To encourage the trust in TimeCert we have Open Sourced it. The source is available on 
